[project]
name = "marimo-project"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "marimo>=0.19.7",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "py>=1.11.0",
    "python-lsp-server>=1.14.0",
    "ty>=0.0.14",
    "vl-convert-python>=1.9.0.post1",
]
